<resources>
    <string name="app_name">FinalProject</string>

    <!-- Main Menu strings -->
    <string name="mainmenu_ticketmaster">Ticket Master</string>
    <string name="mainmenu_recipe">Recipe Search</string>
    <string name="mainmenu_covid">COVID-19 Case Data</string>
    <string name="mainmenu_audio">Audio Database</string>
    <string name="mainmenu_home">Home</string>

    <!-- Shared Strings. Put anything you think might be useful for other apps here. -->
    <string name="shared_ok">OK</string>
    <string name="shared_yes">Yes</string>
    <string name="shared_no">No</string>
    <string name="shared_add">Add</string>
    <string name="shared_close">Close</string>
    <string name="shared_open">Open</string>
    <string name="shared_remove">Remove</string>
    <string name="shared_removed">Removed</string>
    <string name="shared_delete">Delete</string>
    <string name="shared_search">Search</string>
    <string name="shared_search_tooltip">Search…</string>
    <string name="shared_id">ID</string>
    <string name="shared_id_column">ID: </string>
    <string name="shared_name">Name</string>
    <string name="shared_title">Title</string>
    <string name="shared_loading">Loading…</string>
    <string name="shared_undo">Undo</string>
    <string name="shared_help">Help</string>
    <string name="shared_info">Information</string>
    <string name="shared_credits">Credits</string>
    <string name="shared_exit">Exit</string>
    <string name="shared_hide">Hide</string>
    <string name="shared_search_header">Search Results</string>
    <string name="shared_save">Save</string>
    <string name="shared_version">Version 1.0</string>
    <string name="shared_delete_confirm">Are you sure you want to delete?</string>
    <string name="shared_fav">Do you want to add to favourites?</string>
    <string name="shared_error">Error!</string>
    <string name="shared_show_fav">Refresh Favourites</string>
    <string name="introduction">This App was developed by: Ali, Manalibharat, Saad, and Stewart</string>
    <string name="main_help">Click a button to go the app</string>


    <!-- Audio App -->

    <!-- Covid App -->
    <string name="covidCaseData">Covid-19 Data</string>
    <string name="CovidHeader">Welcome to the Covid Search Page</string>
    <string name="covidAuthor">Stewart King</string>
    <string name="covidVersion">Version 1.0</string>
    <string name="country">Country</string>
    <string name="dateTwo">Date</string>
    <string name="hint">Type Here</string>
    <string name="date">Date(YYYY-MM-DD)</string>
    <string name="CovidErrTitle">Error</string>
    <string name="CovidErrMsg">Check Country Name and Date, or check Date Format(YYYY-MM-DD)</string>
    <string name="menu_help">Help</string>
    <string name="fav_help">Favourites</string>
    <string name="CovidWelcome">Welcome to the Covid search page. Enter a country name and date to search. To save the
    result, press the "favourite" button. To delete a saved record, press and hold the record you want deleted.</string>
    <string name="homeheader">Welcome to Our App!</string>
    <string name="countryIs">The Country is: </string>
    <string name="dateIs">The Date is: </string>
    <string name="covid_credits">Developer: Stewart King\nStudent Number: 040793799\nFall 2020 CST2335.</string>

    <!-- Recipe App -->
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_ingredient_singular">Ingredient</string>
    <string name="recipe_ingredient_tooltip">Ingredient…</string>
    <string name="recipe_favourite_toggle">In Favourites</string>
    <string name="recipe_favourite_in">Is now in favourites</string>
    <string name="recipe_favourite_out">Is no longer in favourites</string>
    <string name="recipe_favourites">Favourites</string>
    <string name="recipe_view_item">View Item</string>
    <string name="recipe_ingredient_delete_title">Delete Ingredient</string>
    <string name="recipe_ingredient_delete">Are you sure you want to delete</string>
    <string name="recipe_database_information">Recipe Database Information</string>
    <string name="recipe_thumbnail">Thumbnail</string>
    <string name="recipe_ingredient_added">Added Ingredient</string>
    <string name="recipe_credits">Developer: Ali Deym\nStudent Number: 040990616\nFall 2020 CST2335.</string>
    <string name="recipe_main_info">Navigate through the menus by clicking them.\n
            After searching for an item, you can click the favourite icon to save it.\n
            By clicking a recipe, you will have more information, as well as the picture of recipe.\n
            Holding long click on a recipe will give you database information.\n
            Press the Ingredients button to see the ingredients you are searching for.\n
            Press the Favourite button (Star) to see your saved recipes.</string>
    <string name="recipe_ingredients_info">To add an ingredient, simply type it in the edit box and press "Add" button.\n
            To remove an ingredient, you can use the following options:\n
            1- Long click on it, and confirm.\n
            2- Click on remove icon, and confirm.\n\n
            To read an ingredient in bigger font/size or to know the database ID, simply tap the title of that Ingredient.</string>
    <string name="recipe_favourites_info">To view an item, simply click on the title of it.\n
            To see the database information of a recipe, long click it.\n
            To remove an item from favourites, click the star icon.</string>
    <string name="recipe_item_info">To open the recipe instructions and details in your web browser,
            simply click the URL (ID) of the recipe and it will load your system web browser.\n
            To toggle an item in favourites (save or unsave), simply change the checkbox of favourites.</string>

    <!-- Ticket App -->

</resources>