<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbar_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/shared_help"
        android:text="@string/CovidWelcome"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_credit"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/shared_info"
        android:text="@string/covidAuthor"
        app:showAsAction="always" />
    <item
        android:id="@+id/toolbar_audio"
        android:title="@string/mainmenu_audio"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_covid"
        android:title="@string/mainmenu_covid"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_recipe"
        android:title="@string/mainmenu_recipe"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_ticket"
        android:title="@string/mainmenu_ticketmaster"
        app:showAsAction="never" ></item>
</menu>