<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/navbar_audio"
            android:icon="@android:drawable/stat_sys_speakerphone"
            android:title="@string/mainmenu_audio"
            app:showAsAction="never" />
        <item
            android:id="@+id/navbar_covid"
            android:icon="@android:drawable/stat_notify_error"
            android:title="@string/mainmenu_covid"
            app:showAsAction="never" />
        <item
            android:id="@+id/navbar_recipe"
            android:icon="@drawable/recipe_food"
            android:title="@string/mainmenu_recipe"
            app:showAsAction="never" />
        <item
            android:id="@+id/navbar_ticket"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/mainmenu_ticketmaster"
            app:showAsAction="never" />
    </group>

    <group>
        <item
            android:id="@+id/navbar_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/shared_help"
            app:showAsAction="always" />
        <item
            android:id="@+id/navbar_credit"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/shared_credits"
            app:showAsAction="always" />
    </group>

    <group>
        <item
            android:id="@+id/navbar_exit"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/shared_exit" />
    </group>
</menu>