<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/item1"
        android:title="@string/mainmenu_ticketmaster"
        android:icon="@drawable/ticket_icon"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item android:id="@+id/item2"
        android:title="@string/mainmenu_recipe"
        android:icon="@drawable/recipe_icon"
        android:orderInCategory="200"
        app:showAsAction="always"/>
    <item android:id="@+id/item3"
        android:title="@string/covidCaseData"
        android:icon="@drawable/covid_icon"
        android:orderInCategory="300"
        app:showAsAction="always"/>
    <item android:id="@+id/item4"
        android:title="@string/mainmenu_audio"
        android:icon="@drawable/music_icon"
        android:orderInCategory="400"
        app:showAsAction="always"/>
</menu>