<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/mainmenu_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_audio" />

    <Button
        android:id="@+id/mainmenu_covid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainmenu_audio"
        android:text="@string/mainmenu_covid" />

    <Button
        android:id="@+id/mainmenu_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainmenu_covid"
        android:text="@string/mainmenu_recipe" />

    <Button
        android:id="@+id/mainmenu_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainmenu_recipe"
        android:text="@string/mainmenu_ticketmaster" />
</RelativeLayout>