<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CovidMain">

    <include
        layout="@layout/activity_toolbar"
        android:id="@+id/toolbar" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/line1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/country"/>
                <EditText
                    android:id="@+id/country"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="@string/hint"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
                <EditText
                    android:id="@+id/date"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:hint="@string/hint"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/entrySearch"
                android:text="@string/shared_search" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/savedData"
                android:layout_weight="1"/>
        </LinearLayout>
        <!-- Navigation Drawer -->
        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/covid_menu_header_layout"
            app:menu="@menu/covidpopmenu"
            android:id="@+id/nav_view"/>
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>